modify skeleton to adapt the new interface

--- a/skeleton/template/article/list.html
+++ b/skeleton/template/article/list.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-    <title><?=${title}?></title>
-    <meta name="Keywords" content=""/>
-    <meta name="Description" content=""/>
+    <title><?=${site.title}?></title>
+    <meta name="Keywords" content="<?=${site.keywords}?>"/>
+    <meta name="Description" content="<?=${site.desc}?>"/>
     <link rel="stylesheet" type="text/css" href="/static/style/dark/soft/list.css"/>
     <link rel="stylesheet" type="text/css" href="/static/style/dark/top-foot.css"/>
 </head>
