update and stdlize the skeleton

--- a/skeleton/template/article/about.html
+++ b/skeleton/template/article/about.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="/static/style/dark/top-foot.css"/>
 </head>
 <body>
-<?include ../share/head.html?>
+<?include share/head.html?>
 <div class="main">
     <div class="c-box">
         <h3 class="p-h3">狮子的魂：</h3>
@@ -50,12 +50,12 @@
 			同时完成了C语言扩展库-celib的开发，封装了常用的数据结构和算法。</>
 		<p><b>2013年下半年：</b>依据反馈升级Jcse/Friso/Robbe, 前些时间完善了celib加入了压缩/MD5等封装。后期深入的学习了Linux下C开发，
 			多进程/线程，信号，IO, 异步IO，和Socket编程。依据所学的东西开发了一个LRU缓存框架-smcache，中途还做了一个坦克大战的小游戏tankwar。</p>
-		<p>2014 - ? 就职深圳锐驰互动科技有限公司，担任“乐锐”的架构师。</p>
+		<p>2014 - ? 就职深圳锐驰互动科技有限公司，前提担任“乐锐”的架构师，10月份开始担任公司CTO，负责微头条的核心技术方向和系统架构。</p>
 		<p>会有更多的奇迹发生的。。。。。。。</p>
 
         </div>
     </div>
 </div>
-<?include ../share/foot.html?>
+<?include share/foot.html?>
 </body>
 </html>
