--- a/skeleton/template/article/list.html
+++ b/skeleton/template/article/list.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="/static/style/dark/top-foot.css"/>
 </head>
 <body>
-<?include ../share/head.html?>
+<?include share/head.html?>
 <div class="main">
     <div class="c-box">
         <h3 class="p-h3">开源软件：</h3>
@@ -27,6 +27,6 @@
         </div>
     </div>
 </div>
-<?include ../share/foot.html?>
+<?include share/foot.html?>
 </body>
 </html>
