adjust the system structrue

--- a/skeleton/resource/template/article/list.html
+++ b/skeleton/resource/template/article/list.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-    <title><?=${site.title}?></title>
-    <meta name="Keywords" content="<?=${site.keywords}?>"/>
-    <meta name="Description" content="<?=${site.desc}?>"/>
+    <title><?=config('lang.site#title')?></title>
+    <meta name="Keywords" content="<?=config('lang.site#keywords')?>"/>
+    <meta name="Description" content="<?=config('lang.site#desc')?>"/>
     <link rel="stylesheet" type="text/css" href="/static/style/dark/article/list.css"/>
     <link rel="stylesheet" type="text/css" href="/static/style/dark/top-foot.css"/>
 </head>
