write more about the "about me"

--- a/skeleton/resource/template/article/about.html
+++ b/skeleton/resource/template/article/about.html
@@ -13,7 +13,7 @@
         <h3 class="p-h3">狮子的魂：</h3>
         <div id="list-box">
 
-        <p>关于狮子的魂：(The soul of a lion)<p>
+        <p>关于狮子的魂：(The soli of a lion)<p>
 		<p>真名： 陈鑫, 湖南郴州人, 湖南理工学院退学学生。90后的一个普普通通的程序员，超级代码痴，严重代码洁癖，情商低至不及格，
 			多个知名<a href="<?=config('links#software-list')?>">开源软件</a>的作者。</p>
 		<p>技术研究领域：海量数据处理和高并发，信息安全，NLP（重点：信息检索，中文分词，语音合成）。</p>
@@ -22,6 +22,19 @@
 		<p>全部开源软件：<a href="<?=config('links#gitosc-home')?>" target="_blank"><?=config('links#gitosc-home')?></a>
 			或者<a href="<?=config('links#github-home')?>" target="blank"><?=config('links#github-home')?></a></p>
 		<p>座右铭：平凡 | 执着</p>
+        <p>媒体足迹：</p>
+        <ul class="pr-links">
+            <li>1. <a href="https://mp.weixin.qq.com/s?__biz=MjM5MDg5OTIyOQ==&mid=210476953&idx=6&sn=850ca08082b625c73e790c896d649752&scene=1" target="_blank">
+                4个年轻人如何用一份PPT“搞到”千万融资！</a></li>
+            <li>2. <a href="http://www.ctoutiao.com/news/64648.html" target="_blank">国内资讯类产品已成红海，内容创业者如何成为头条?</a></li>
+            <li>3. <a href="http://mp.weixin.qq.com/s?__biz=MzA5MjA1NjcwMw==&mid=207384428&amp;idx=1&sn=24d6a7a77ce9d7bea0581e37d413418b#rd" target="_blank">
+                中国的BuzzFeed 微头条：如何在6个月用趣味制造过亿访问量</a></li>
+            <li>4. <a href="http://www.difangzhi.org/2420495.html" target="_blank">获WeMedia新媒体集团战略投资,微头条欲成为中国版"BuzzFeed"</a></li>
+            <li>5. <a href="https://mp.weixin.qq.com/s?__biz=MzAwNjI2NTI0NQ==&mid=2651489266&idx=1&sn=fb8f2b5e785ffcb240fc6680dd6355c7&scene=1" target="_blank">
+                内容为王的时代，微头条CEO如何抓准年轻人逗趣笑点？</a></li>
+            <li>6. <a href="https://mp.weixin.qq.com/s?__biz=MzI0NzAzNTUwMQ==&mid=2652414271&idx=4&sn=c5167b5627cb93ea24d29a3038b58926&scene=1" target="_blank">
+                编辑挖趣闻造爆款内容 他在背后提供模板素材库 广告销售额200万</a></li>
+        </ul>
 		<h3>人生经历：</h3>
 		<p><b>2009年下半年：</b>进入湖南理工学院开始自己的大学生涯并且开始接触HTML/CSS/JS，发现自己对于计算机超级痴迷。</p>
 		<p><b>2010年上半年：</b>开始学习PHP和基本企业网站的搭建。</p>
@@ -50,7 +63,8 @@
 			同时完成了C语言扩展库-celib的开发，封装了常用的数据结构和算法。</>
 		<p><b>2013年下半年：</b>依据反馈升级Jcse/Friso/Robbe, 前些时间完善了celib加入了压缩/MD5等封装。后期深入的学习了Linux下C开发，
 			多进程/线程，信号，IO, 异步IO，和Socket编程。依据所学的东西开发了一个LRU缓存框架-smcache，中途还做了一个坦克大战的小游戏tankwar。</p>
-		<p>2014 - 2016.09 ? 就职深圳锐驰互动科技有限公司，前期担任“微头条”的架构师，2014.10月份开始担任公司CTO，负责微头条的技术方向和核心架构与实现。</p>
+		<p><b>2014.03-2016.08：</b>就职于深圳锐驰互动科技有限公司，前期担任“微头条”的架构师，2014.10月份开始担任公司CTO，负责微头条的技术战略和系统核心架构与实现; 融资：带领公司从0到天使轮，Pre-A轮再到A轮融资；技术管理：管理12人的技术团队，带领团队一直迭代产品；系统架构：微头条后期有2200W+pv/天，一共准备了11台服务器（数据库主从服务器，web服务器，代理服务器，图片存储和处理服务器，运营系统服务器，爬虫服务器，定时/异步任务处理服务器，备份服务器）我们把系统设计为每天可以承受3亿+pv；功能系统：微头条系统核心，微头条的信息流系统，Quiz系统，类似于友盟的运营管理系统，webot系统（公司技术核心，内容热点蹿红发现，图片/文字素材库，wdeditor原创内容生产编辑器，流量监测与蹿红监测系统），信息流的检索和智能推荐系统，以及后期的数据库分区和流量负载实现；真正对机器学习，NLP深入和应用的开始，形成了自己的一套成熟的开发框架和高并发处理系统</p>
+		<p><b>2016.08 - ?：</b>内心无法割舍对自由的渴求，开始了自己的创业之旅；从给初创企业提供前期的产品的打磨和后期产品的迭代，规划技术发展路线和提供技术培训开始，后期会专注黑科技，想通过技术改变生活，改变世界！</p>
 		<p>会有更多的奇迹发生的。。。。。。。</p>
 
         </div>
