update the about me

--- a/skeleton/resource/template/article/about.html
+++ b/skeleton/resource/template/article/about.html
@@ -63,8 +63,9 @@
 			同时完成了C语言扩展库-celib的开发，封装了常用的数据结构和算法。</>
 		<p><b>2013年下半年：</b>依据反馈升级Jcse/Friso/Robbe, 前些时间完善了celib加入了压缩/MD5等封装。后期深入的学习了Linux下C开发，
 			多进程/线程，信号，IO, 异步IO，和Socket编程。依据所学的东西开发了一个LRU缓存框架-smcache，中途还做了一个坦克大战的小游戏tankwar。</p>
-		<p><b>2014.03-2016.08：</b>就职于深圳锐驰互动科技有限公司，前期担任“微头条”的架构师，2014.10月份开始担任公司CTO，负责微头条的技术战略和系统核心架构与实现; 融资：带领公司从0到天使轮，Pre-A轮再到A轮融资；技术管理：管理12人的技术团队，带领团队一直迭代产品；系统架构：微头条后期有2200W+pv/天，一共准备了11台服务器（数据库主从服务器，web服务器，代理服务器，图片存储和处理服务器，运营系统服务器，爬虫服务器，定时/异步任务处理服务器，备份服务器）我们把系统设计为每天可以承受3亿+pv；功能系统：微头条系统核心，微头条的信息流系统，Quiz系统，类似于友盟的运营管理系统，webot系统（公司技术核心，内容热点蹿红发现，图片/文字素材库，wdeditor原创内容生产编辑器，流量监测与蹿红监测系统），信息流的检索和智能推荐系统，以及后期的数据库分区和流量负载实现；真正对机器学习，NLP深入和应用的开始，形成了自己的一套成熟的开发框架和高并发处理系统</p>
-		<p><b>2016.08 - ?：</b>内心无法割舍对自由的渴求，开始了自己的创业之旅；从给初创企业提供前期的产品的打磨和后期产品的迭代，规划技术发展路线和提供技术培训开始，后期会专注黑科技，想通过技术改变生活，改变世界！</p>
+		<p><b>2014.03-2016.08：</b>就职于深圳锐驰互动科技有限公司，前期担任“微头条”的架构师，2014.10月份开始担任公司CTO，负责微头条的技术战略和系统核心架构与实现; 融资：带领公司从0到天使轮，Pre-A轮再到A轮融资；技术管理：管理12人的技术团队，带领团队一直迭代产品；系统架构：微头条后期有2200W+pv/天，一共准备了11台服务器（数据库主从服务器，web服务器，代理服务器，图片存储和处理服务器，运营系统服务器，爬虫服务器，定时/异步任务处理服务器，备份服务器）我们把系统设计为每天可以承受3亿+pv；功能系统：微头条系统核心，微头条的信息流系统，Quiz系统，类似于友盟的运营管理系统，webot系统（公司技术核心，内容热点蹿红发现，图片/文字素材库，wdeditor原创内容生产编辑器，流量监测与蹿红监测系统），信息流的检索和智能推荐系统，以及后期的数据库分区和流量负载实现；真正对机器学习，NLP深入和应用的开始，形成了自己的一套成熟的开发框架和高并发处理系统；<br/>
+        同在此段时间，将Jcseg不断迭代完善，发布很多版本到最新的2.0.0，并且把jcseg上传到了maven中央仓库；因为微头条webot系统的需要，又开发了一个新的开源软件<a href="https://github.com/lionsoul2014/ip2region">ip2region</a>，最自由的ip地址定位库获得大家的一致好评；基于微头条系统的发展经验又将php开发框架syrian升级到了2.0；同时也慢慢的更深入了groovy，系统架构，php内核，JVM，智能推荐和机器学习！</p>
+		<p><b>2016.08 - ?：</b>内心无法割舍对自由的渴求，开始了自己的创业之旅；从以技术合伙人的身份给各种初创企业提供前后期产品的分析打磨和迭代，帮助规划产品技术发展路线和提供技术培训开始，后期会专注黑科技，想通过技术改变生活，改变世界！</p>
 		<p>会有更多的奇迹发生的。。。。。。。</p>
 
         </div>
