Update the about

--- a/skeleton/resource/template/article/about.html
+++ b/skeleton/resource/template/article/about.html
@@ -14,10 +14,10 @@
         <div id="list-box">
 
         <p>关于狮子的魂：(The soli of a lion)<p>
-		<p>真名： 陈鑫, 湖南郴州人, 湖南理工学院退学学生。90后的一个普普通通的程序员，超级代码痴，严重代码洁癖，情商低至不及格，
+		<p>真名： 陈鑫, 湖南郴州人, 湖南理工学院退学学生。90后的一个普通的程序员，超级代码痴，严重代码洁癖，
 			多个知名<a href="<?=config('links#software-list')?>">开源软件</a>的作者。</p>
-		<p>技术研究领域：海量数据处理和高并发，信息安全，NLP（重点：信息检索，中文分词，语音合成）。</p>
-		<p>爱好也是擅长：写代码，篮球，溜冰(极限/花样都ok啦)，音乐（笛子，小提琴）</p>
+		<p>技术研究领域：海量数据处理和高并发，信息安全，AI（机器学习，深度学习)，NLP（中文分词，信息检索，语义理解，实体提取，文本摘要，语音识别）。</p>
+		<p>爱好也是擅长：写代码，运动（羽毛球，篮球），音乐（笛子，吉他，小提琴）</p>
 		<p>常用博客：<a href="<?=config('links#oschina-home')?>" target="_blank"><?=config('links#oschina-home')?></a></p>
 		<p>全部开源软件：<a href="<?=config('links#gitosc-home')?>" target="_blank"><?=config('links#gitosc-home')?></a>
 			或者<a href="<?=config('links#github-home')?>" target="blank"><?=config('links#github-home')?></a></p>
@@ -65,9 +65,9 @@
 			多进程/线程，信号，IO, 异步IO，和Socket编程。依据所学的东西开发了一个LRU缓存框架-smcache，中途还做了一个坦克大战的小游戏tankwar。</p>
 		<p><b>2014.03-2016.08：</b>就职于深圳锐驰互动科技有限公司，前期担任“微头条”的架构师，2014.10月份开始担任公司CTO，负责微头条的技术战略和系统核心架构与实现; 融资：带领公司从0到天使轮，Pre-A轮再到A轮融资；技术管理：管理12人的技术团队，带领团队一直迭代产品；系统架构：微头条后期有2200W+pv/天，一共准备了11台服务器（数据库主从服务器，web服务器，代理服务器，图片存储和处理服务器，运营系统服务器，爬虫服务器，定时/异步任务处理服务器，备份服务器）我们把系统设计为每天可以承受3亿+pv；功能系统：微头条系统核心，微头条的信息流系统，Quiz系统，类似于友盟的运营管理系统，webot系统（公司技术核心，内容热点蹿红发现，图片/文字素材库，wdeditor原创内容生产编辑器，流量监测与蹿红监测系统），信息流的检索和智能推荐系统，以及后期的数据库分区和流量负载实现；真正对机器学习，NLP深入和应用的开始，形成了自己的一套成熟的开发框架和高并发处理系统；<br/>
         同在此段时间，将Jcseg不断迭代完善，发布很多版本到最新的2.0.0，并且把jcseg上传到了maven中央仓库；因为微头条webot系统的需要，又开发了一个新的开源软件<a href="https://github.com/lionsoul2014/ip2region">ip2region</a>，最自由的ip地址定位库获得大家的一致好评；基于微头条系统的发展经验又将php开发框架syrian升级到了2.0；同时也慢慢的更深入了groovy，系统架构，php内核，JVM，智能推荐和机器学习！</p>
-		<p><b>2016.08 - ?：</b>内心无法割舍对自由的渴求，开始了自己的创业之旅；从以技术合伙人的身份给各种初创企业提供前后期产品的分析打磨和迭代，帮助规划产品技术发展路线和提供技术培训开始，后期会专注黑科技，想通过技术改变生活，改变世界！</p>
-		<p>会有更多的奇迹发生的。。。。。。。</p>
-
+		<p><b>2016.08 - 2017.04：</b>内心无法割舍对自由的渴求，开始了自己的创业之旅；从以技术合伙人的身份给各种初创企业提供前后期产品的分析打磨和迭代，帮助规划产品技术发展路线和提供技术培训开始，后期会专注黑科技，想通过技术改变生活，改变世界。同时也花了大量时间研究基础数学和机器学习，阅读相关的书籍代码实践。</p>
+		<p><b>2017.04 - 2017.10.30：</b>合伙人身份加入深圳前海黑鲸科技并且担任CTO，公司专注：带屏设备的单麦远场语音交互产品，使用单麦调到了麦克风阵列的90%的唤醒和远距离识别效果(安静场合10米90%以上准确率)。负责整个黑鲸语音助手的打磨，从前端降噪，调优再到后台NLP的影视，直播，音乐，问答的研发（基于了我之前研发的NLP平台，做的应用）。因为价值观的不和，10月底离开了公司。</p>
+		<p><b>2017.10.30 - 至今：</b>黑鲸的经历更让我坚定了NLP的趋势，以及自己打磨的NLP平台的优势。注册了“深圳原语科技有限公司”，开始了带屏设备的语义理解和知识库的NLP创业，通过知识库提供更快，更准确的用户语义理解和结构化知识的返回。12月份中旬已经完成了平台第二代内核的开发，训练了视频直播，影视点播，音乐点播，界面操控，影视问答，音乐问答等核心语义技能。例如：我想看周星驰吴孟达刘德华一起主演的喜剧片（可以准确快速的找出相关的资源，并且返回结构化的知识数据），目前知识库实体有500w+。（工作之余，1. 投入到jcseg和ip2region的issue处理和版本升级，2. 阅读更多书籍，数学之美，深度学习，统计NLP，环球科学，文明之光等）</p>
         </div>
     </div>
 </div>
