Update the list url and the link name

--- a/skeleton/resource/template/article/list.html
+++ b/skeleton/resource/template/article/list.html
@@ -18,8 +18,8 @@
                 <h3 class="li-title"><a href="<?=$val.url?>" target="_blank"><?=$val.title?></a></h3>
                 <div class="li-brief"><?=$val.brief?></div>
                 <div class="li-box">
-                    <a href="<?=$val.url?>" target="_blank" class="lb-index button-link">软件官方网站</a>
-                    <a href="<?=$val.git?>" target="_blank" class="lb-git button-link">查看Git源码托管</a>
+                    <a href="<?=$val.gitee?>" target="_blank" class="lb-index button-link">码云托管地址</a>
+                    <a href="<?=$val.github?>" target="_blank" class="lb-git button-link">Github托管地址</a>
                 </div>
             </div>
             <?}?>
