--- a/skeleton/resource/template/article/about.html
+++ b/skeleton/resource/template/article/about.html
@@ -57,8 +57,7 @@
 			同时因为Jcseg的反馈良好激起了我继续开发的激情，然后给Jcseg发布了几个后续版本。</p>
 		<p><b>2012年的寒假：</b>想将分词移植到PHP下来，想过很多办法，最终的选择就是使用C重新开发一遍，一方面可以深入的应用C,
 			一方面可以学习了解了PHP的扩展和内核，宅在家里接近一个月才完成了Friso以及其php扩展Robbe的开发，当然也开源了。</p>
-		<p><b>2013年上半年：</b>一方面忙于带培训班的学生，一方面不断的依据网友的反馈升级Jcseg和Friso/Robbe。依据自己的项目经验开发了一个
-			PHP框架-Opert，哈，不过没有开源。</p>
+		<p><b>2013年上半年：</b>一方面忙于带培训班的学生，一方面不断的依据网友的反馈升级Jcseg和Friso/Robbe。此段时间也是对各种入侵技术的痴迷巅峰时期，之前也偶尔玩玩：代码之余还是代码，不过喜欢折腾学校的各个网站，一年下来学校的几十个网站基本上全部都入侵过了，进入后台看看获得满足感就OK了，最难的是图书馆的系统，虽然花了一周多时间，最终还是破解了（还是线下结合才找到的破绽），借的十几本计算机的书直接就后台设置还了（PS：退学后后面还是全部还回去了，图书管理员说这些书貌似还掉了，我说你们系统出问题了，我没还过啊，她说噢，应该是的！）。</p>
 		<p><b>2013年的暑假：</b>6.27-6.30日，应CSDN的邀请去北京参加了开源世界开源中国第八次高峰论坛（ocow）。另外，哈，几个哥们又聚在一起了，给他们上了C语言的课程，
 			同时完成了C语言扩展库-celib的开发，封装了常用的数据结构和算法。</>
 		<p><b>2013年下半年：</b>依据反馈升级Jcse/Friso/Robbe, 前些时间完善了celib加入了压缩/MD5等封装。后期深入的学习了Linux下C开发，
