Fix the link bug

--- a/skeleton/resource/template/article/list.html
+++ b/skeleton/resource/template/article/list.html
@@ -15,7 +15,7 @@
         <?if ( ${data} != FALSE ) {?>
             <?for ( $val : ${data} ) {?>
             <div class="list-item">
-                <h3 class="li-title"><a href="<?=$val.url?>" target="_blank"><?=$val.title?></a></h3>
+                <h3 class="li-title"><a href="<?=$val.gitee?>" target="_blank"><?=$val.title?></a></h3>
                 <div class="li-brief"><?=$val.brief?></div>
                 <div class="li-box">
                     <a href="<?=$val.gitee?>" target="_blank" class="lb-index button-link">码云托管地址</a>
