Update the demo

--- a/skeleton/resource/template/article/about.html
+++ b/skeleton/resource/template/article/about.html
@@ -13,7 +13,7 @@
         <h3 class="p-h3">狮子的魂：</h3>
         <div id="list-box">
 
-        <p>关于狮子的魂：(The soli of a lion)<p>
+        <p>关于狮子的魂：(The soul of a lion)<p>
 		<p>真名： 陈鑫, 湖南郴州人, 湖南理工学院退学学生。90后的一个普通的程序员，超级代码痴，严重代码洁癖，
 			多个知名<a href="<?=config('links#software-list')?>">开源软件</a>的作者。</p>
 		<p>技术研究领域：海量数据处理和高并发，信息安全，AI（机器学习，深度学习)，NLP（中文分词，信息检索，语义理解，实体提取，文本摘要，语音识别）。</p>
