--- a/skeleton/resource/template/share/foot.html
+++ b/skeleton/resource/template/share/foot.html
@@ -1,6 +1,6 @@
 <div id="foot">
     <div id="foot-box">
-        Copyright&nbsp;&nbsp;&copy; 2013-2016&nbsp;&nbsp;Lionsoul.All Rights Reserved <br />
+        Copyright&nbsp;&nbsp;&copy; 2013-2018&nbsp;&nbsp;Lionsoul All Rights Reserved <br />
         狮子的魂 版权所有
     </div>
 </div>
